--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1">
 
     <title>A Wonderful Day</title>
-    <link rel="icon" type="image/png" href="imgs/heart.png">
+    <link rel="icon" type="image/png" href="assets/imgs/heart.png">
 	<link rel="stylesheet" href="css/styles.css" type="text/css">
 
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -13,9 +13,12 @@
     <link href="https://fonts.googleapis.com/css2?family=Pixelify+Sans:wght@400..700&display=swap" rel="stylesheet">
 </head>
 <body>
+    <video id="video-bg" autoplay muted loop playsinline>
+        <source src="assets/imgs/winter_background.mp4" type="video/mp4" />
+    </video>
     <div id="card_container">
         <div id="card">
-            <div id="heart"><img src="imgs/heart.png"></div>
+            <div id="heart"><img src="assets/imgs/heart.png"></div>
             <p>
                 My dearest <span id="card_name"></span>,<br><br>
                 
