started dialogue, rearranged layout structure, adjusted surprised duck image, starting rebuild of dialogue control

--- a/index.html
+++ b/index.html
@@ -26,11 +26,13 @@
                 <img id="character_img" src="assets/imgs/duck.png">
             </div>
             <div id="dialogue_container">
-                <div id="dialogue" class="section"></div>
-                <div id="input" class="section"><input type="text" placeholder="Name" id="username_input"></div>
-                <div id="buttons" class="section"></div>
+                <div id="text"><h1>Tap/click anywhere to start</h1></div>
+                <div id="response_container">
+                    <div id="input_container"><input type="text" placeholder="Name" id="text_input"></div>
+                    <div id="button_container"></div>
+                </div>
             </div>
-            <div id="card_container">
+            <!-- <div id="card_container">
                 <div id="card">
                     <div id="heart"><img src="assets/imgs/heart.png"></div>
                     <p>
@@ -43,7 +45,7 @@
                         P.S. willlll youuuu bee my valentinneeee??
                     </p>
                 </div>
-            </div>
+            </div> -->
         </div>
     </div>
     <script src="js/index.js"></script>
