finished dialogue, changed img to chrctr, added newspaper

--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <div id="character">
                 <img id="character_img" src="assets/imgs/duck.png">
             </div>
+            <div id="newspaper">
+                <img id="newspaper_img">
+            </div>
             <div id="dialogue_container">
                 <div id="text"><h1>Tap/click anywhere to start</h1></div>
                 <div id="response_container">
