added click anywhere

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
                 <img id="newspaper_img">
             </div>
             <div id="dialogue_container">
-                <div id="text"><h1>Tap/click anywhere to start</h1></div>
+                <div id="text"><h1></h1></div>
                 <div id="response_container">
                     <div id="input_container"><input type="text" placeholder="Name" id="text_input"></div>
                     <div id="button_container"></div>
